deployment-script/vandychat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vandychat-service
spec:
  selector:
    app: vandychat
  ports:
    - protocol: TCP
      port: 80  # The service port
      targetPort: 80  # The container port
  type: ClusterIP
