deployment-script/vandychat-network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vandychat-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    # Add other necessary annotations for your Ingress controller
spec:
  rules:
  - host: "vandy.chat"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vandychat-service
            port:
              number: 80
  tls:  # <-- adding this section to specify TLS configuration
  - hosts:
    - "vandy.chat"
    secretName: vandy-chat-tls  # Kubernetes Secret to store the certificate
